[package]
name = "vm-device"
version = "0.1.0"
authors = ["Samuel Ortiz <sameo@linux.intel.com>"]
repository = "https://github.com/rust-vmm/vm-device"
license = "Apache-2.0"
edition = "2018"

[dependencies]
libc = ">=0.2.39"
kvm-bindings = { version = "~0", optional = true }
kvm-ioctls = { version = "~0", optional = true }
vmm-sys-util = "~0"

[features]
legacy-irq = []
msi-irq = []
kvm-irq = ["kvm-ioctls", "kvm-bindings"]
